syntax = "proto3";

package dormBed;

import "google/protobuf/wrappers.proto";
import "common.proto";

option go_package = "github.com/cuit9622/dms/common/pb";

message DormBed{
  int64 id = 1;
  int64 studentID = 2;
  int64 dormID = 3;
}

message DormBeds{
  repeated DormBed dormBeds = 1;
}

message DormBedGetRequest{
  int64 dormBuildingID = 1;
  int32 floor = 2;
  common.PageRequest page = 3;
}

service DormBedService {
  rpc Update(DormBed) returns (google.protobuf.Int32Value) {}
  rpc Delete(google.protobuf.Int64Value) returns (google.protobuf.Int32Value) {}
}
